awesome-media-backend/k8s/awesome-media-backend-deployment.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: awesome-media-backend-deployment
  labels:
    app: awesome-media-backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate #basic configuration
  selector:
    matchLabels:
      app: awesome-media-backend
  template:
    metadata:
      labels:
        app: awesome-media-backend
    spec:
      containers:
      - name: awesome-media-backend
        image: dtlabs/awesome-media-backend:1.0
        ports:
        - containerPort: 8090
        imagePullPolicy: Always
        readinessProbe: #Application 정상 구동여부 10초마다 한번씩 확인함. 2.0이 정상적으로 구동되지 않았을 경우, 1.0모듈로 링크함.
          httpGet: 
            path: /v1/promotions
            port: 8090
          periodSeconds: 10 
        resources:
          requests:
            memory: "256Mi"
            cpu: "50m"
          limits: 
            memory: "1Gi" 
            cpu: "1"
